[tool.poetry]
name = "aula17-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Alexandre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
sqlalchemy = "^2.0.31"
requests = "^2.32.3"
pydantic = "^2.8.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
